[gd_scene load_steps=4 format=3 uid="uid://bjk1lhx7fq6yk"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_3l68k"]
[ext_resource type="Texture2D" uid="uid://iypgwno25iud" path="res://graphics/player/player.png" id="2_082dj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v5w18"]
radius = 64.0078

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3l68k")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(37, -1)
rotation = 1.5708
texture = ExtResource("2_082dj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_v5w18")

[node name="TimerLaser" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerGranade" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]
rotation = 1.5708

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(8, -132)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(18, -135)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(28, -132)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_laser_timeout"]
[connection signal="timeout" from="TimerGranade" to="." method="_on_timer_granade_timeout"]
